--- a/index-START.html
+++ b/index-START.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-<h1>hello</h1>
-<h2>testing</h2>
+
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -60,6 +59,28 @@
 
 <script>
 
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`); 
+    //stop function if it keycode doesnt have corresponding audio attribute in HTMl doc
+    if(!audio) return;
+    //rewind sound to start
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  }
+
+  function removeTransition(e) {
+    //skip it if it's not a transform
+    if(e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  };
+  //listen to all keys on page
+  const keys = document.querySelectorAll('.key');
+  //listen for event called transitionedEnd on each one. Since the aobve code returns an array(look in the console) we cant use addEventListener on narrays. so we willl use forEach
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  window.addEventListener('keydown', playSound);
 </script>
 
 
